clusters/k3s/apps/teslamate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teslamate
  labels:
    name: teslamate
