clusters/k3s/apps/teslamate/deployment-abrp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abrp
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: abrp
  template:
    metadata:
      labels:
        app.kubernetes.io/component: abrp
    spec:
      containers:
        - name: abrp
          image: fetzu/teslamate-abrp:3.3.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        fsGroup: 10000
