clusters/k3s/apps/teslamate/deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/component: grafana
    spec:
      containers:
        - name: grafana
          image: teslamate/grafana:2.1.1
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 472
            runAsGroup: 472
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
      securityContext:
        fsGroup: 472
