clusters/k3s/apps/teslamate/deployment-teslamate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
  namespace: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:2.1.1
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          volumeMounts:
            - name: import
              mountPath: /opt/app/import
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: import
          persistentVolumeClaim:
            claimName: teslamate-import
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        fsGroup: 10000
