clusters/k3s/apps/teslamate/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: teslamate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
