clusters/k3s/apps/teslamate/service-teslamate.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: teslamate
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
